manifests/flask-svc.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "flask-service"
  namespace: "default"
  labels:
    app: "flask"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 5000
  selector:
    app: "flask"
  type: "LoadBalancer"
  loadBalancerIP: ""
