manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warrior-service
spec:
  selector:
    app: warrior-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
